--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -86,7 +86,7 @@ MainMenu.About.ToolTip=Affiche les informations sur ce programme
 
 BalanceHistory.balance=Solde au {0} : {1}
 
-AboutDialog.Content=Auteur : {0} \nVersion : {1}
+AboutDialog.Content=<html>Auteur : <b>{0}</b><br>Version : <b>{1}</b></html>
 
 NewAccountDialog.title=Cr\u00E9ation de compte
 NewBankAccountDialog.account=Compte :
