--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -86,7 +86,9 @@ MainMenu.About.ToolTip=Affiche les informations sur ce programme
 
 BalanceHistory.balance=Solde au {0} : {1}
 
-AboutDialog.Content=<html>Auteur : <b>{0}</b><br>Version : <b>{1}</b></html>
+AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - Tous droits r\u00E9serv\u00E9s<br>Version : <b>{1}</b></html>
+AboutDialog.License.TabName=License
+AboutDialog.RelNotes.TabName=Notes de mise à jour
 
 NewAccountDialog.title=Cr\u00E9ation de compte
 NewBankAccountDialog.account=Compte :
