--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -114,3 +114,16 @@ GenericButton.cancel=Annuler
 GenericButton.cancel.toolTip=Annule la saisie en cours
 GenericButton.ok=Valider
 GenericButton.ok.toolTip=Valide la saisie en cours
+
+Transaction.0=S/O
+Transaction.account=Compte
+Transaction.14=Reste
+Transaction.date=Date
+Transaction.description=Libell\u00E9
+Transaction.amount=Montant
+Transaction.category=Cat\u00E9gorie
+Transaction.mode=Mode
+Transaction.number=Num\u00E9ro
+Transaction.valueDate=Date de valeur
+Transaction.statement=Relev\u00E9
+
