--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -85,6 +85,7 @@ MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Affiche les informations sur ce programme
 
 BalanceHistory.balance=Solde au {0} : {1}
+BalanceHistory.showGrid=Afficher la grille
 
 AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - Tous droits r\u00E9serv\u00E9s<br>Version : <b>{1}</b></html>
 AboutDialog.License.TabName=License
@@ -127,3 +128,39 @@ Transaction.number=Num\u00E9ro
 Transaction.valueDate=Date de valeur
 Transaction.statement=Relev\u00E9
 
+TransactionDialog.account.new.tooltip=Cliquez ici pour cr\u00E9er un nouveau compte
+TransactionDialog.account.tooltip=S\u00E9lectionnez dans ce menu le compte sur lequel s'effectue l'op\u00E9ration
+TransactionDialog.amount=Montant :
+TransactionDialog.amount.tooltip=Entrez le montant de l'op\u00E9ration
+TransactionDialog.bad.amount=Ce bouton est inactif car le montant de l'op\u00E9ration est incorrect
+TransactionDialog.bad.date=Ce bouton est inactif car la date de l'op\u00E9ration est incorrecte
+TransactionDialog.bad.valueDate=Ce bouton est inactif car la date de valeur de l'op\u00E9ration est incorrecte
+TransactionDialog.category=Cat\u00E9gorie :
+TransactionDialog.category.new.tooltip=Cliquez ici pour créer une nouvelle catégorie
+TransactionDialog.date=Date de l'op\u00E9ration :
+TransactionDialog.description=Libell\u00E9 :
+TransactionDialog.mode=Mode de paiement :
+TransactionDialog.mode.new.tooltip=Cliquez ici pour cr\u00E9er un nouveau mode de paiement
+TransactionDialog.mode.tooltip=S\u00E9lectionnez dans ce menu le mode de paiement
+TransactionDialog.needAccount=Avant de pouvoir cr\u00E9er une op\u00E9ration, il est n\u00E9cessaire d'avoir cr\u00E9\u00E9 au moins un compte
+TransactionDialog.number=Num\u00E9ro :
+TransactionDialog.receipt=Recette
+TransactionDialog.statement=Relev\u00E9 :
+TransactionDialog.title.new=Nouvelle op\u00E9ration
+TransactionDialog.valueDate=Date de valeur :
+TransactionDialog.SubPanel.add=Ajouter \u00E0 la transaction
+TransactionDialog.SubPanel.add.tooltip=Cochez cette case pour que le montant global de l'op\u00E9ration soit mis \u00E0 jour automatiquement
+TransactionDialog.SubPanel.delete=Supprimer
+TransactionDialog.SubPanel.modify=Modifier
+TransactionDialog.SubPanel.new=Nouvelle sous-op\u00E9ration
+TransactionDialog.SubPanel.title=Sous-op\u00E9rations
+TransactionDialog.SubPanel.total=Total des sous-op\u00E9rations : {0,number,currency}
+SubTransactionDialog.empty.amount=Ce bouton est d\u00E9sactiv\u00E9 car le montant est vide
+SubTransactionDialog.empty.desciption=Ce bouton est d\u00E9sactiv\u00E9 car le libell\u00E9 de la sous-op\u00E9ration est vide
+SubTransactionDialog.null.amount=Ce bouton est d\u00E9sactiv\u00E9 car le montant est nul
+SubTransactionDialog.title.new=Nouvelle sous-op\u00E9ration
+SubTransactionDialog.description.tooltip=Tapez le descrition de la sous-op\u00E9ration ici
+SubTransactionDialog.receipt.tooltip=Cochez cette case si la sous-op\u00E9ration est une recette
+
+Category.undefined=Ind\u00E9finie
+Mode.undefined=Ind\u00E9fini
