--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -19,6 +19,7 @@ MainMenu.Open=Ouvrir
 MainMenu.Open.Mnemonic=O
 MainMenu.Open.Accelerator=O
 MainMenu.Open.ToolTip=Ouvre un fichier de comptes pr\u00E9alablement sauvegard\u00E9
+MainMenu.Open.Error.DialogContent=D\u00E9sol\u00E9, impossible de lire le fichier {0}.\n Il est sans doute corrompu.
 
 MainMenu.Save=Enregistrer
 MainMenu.Save.Mnemonic=E
@@ -91,20 +92,45 @@ AboutDialog.Content=<html>Copyright &copy; 2009 <b>{0}</b> - Tous droits r\u00E9
 AboutDialog.License.TabName=License
 AboutDialog.RelNotes.TabName=Notes de mise à jour
 
-NewAccountDialog.title=Cr\u00E9ation de compte
-NewBankAccountDialog.account=Compte :
-NewBankAccountDialog.account.tooltip=Tapez ici l'identifiant du compte
-NewBankAccountDialog.balance=Solde :
-NewBankAccountDialog.balance.tooltip=Tapez ici le solde initial du compte
-NewBankAccountDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom du compte est vide
-NewBankAccountDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 un compte de m\u00EAme nom
-NewBankAccountDialog.err3=Ce bouton est d\u00E9sactiv\u00E9 car le solde n'est pas un nombre
+CheckModePanel.statement.tooltip=Entrez obligatoirement un identifiant de relev\u00E9 de compte
+CheckModePanel.title=Mode pointage
+CheckModePanel.title.tooltip=Cliquez ici pour passer en mode pointage (un double clic sur une op\u00E9ration la marque "point\u00E9e")
+CheckModePanel.valueDate.tooltip=Entrez une date de valeur \u00E0 appliquer aux op\u00E9rations point\u00E9es
+CheckModePanel.valueDateEnabled=Remplacer la date de valeur par
+CheckModePanel.valueDateEnabled.toolTip=Cochez cette case pour remplacer automatiquement la date de valeur des op\u00E9rations point\u00E9es par le champ ci-contre
 
-NewCategoryDialog.title=Cr\u00E9ation de cat\u00E9gorie
-NewCategoryDialog.category=Cat\u00E9gorie :
-NewCategoryDialog.category.tooltip=Tapez ici le nom de la cat\u00E9gorie
-NewCategoryDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom de la cat\u00E9gorie est vide
-NewCategoryDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 une cat\u00E9gorie de m\u00EAme nom
+AccountDialog.title=Cr\u00E9ation de compte
+AccountDialog.account=Compte :
+AccountDialog.account.tooltip=Tapez ici l'identifiant du compte
+AccountDialog.balance=Solde :
+AccountDialog.balance.tooltip=Tapez ici le solde initial du compte
+AccountDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom du compte est vide
+AccountDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 un compte de m\u00EAme nom
+AccountDialog.err3=Ce bouton est d\u00E9sactiv\u00E9 car le solde n'est pas un nombre
+
+ModeDialog.new.title=Nouveau mode de paiement
+ModeDialog.account=Compte : {0}
+ModeDialog.name=Nom :
+ModeDialog.forDebts=Utilisable pour les d\u00E9penses
+ModeDialog.forReceipts=Utilisable pour les recettes
+ModeDialog.useCheckBook=Utiliser un ch\u00E9quier
+ModeDialog.bad.debt=Ce bouton est d\u00E9sactiv\u00E9 car les informations d'utilisation pour les d\u00E9penses sont incoh\u00E9rentes
+ModeDialog.bad.receipt=Ce bouton est d\u00E9sactiv\u00E9 car les informations d'utilisation pour les recettes sont incoh\u00E9rentes
+ModeDialog.bad.duplicateMode=Ce bouton est d\u00E9sactiv\u00E9 car le mode {0} existe d\u00E9j\u00E0 dans le compte {1}
+ModeDialog.bad.emptyName=Ce bouton est d\u00E9sactiv\u00E9 car le nom du mode est vide
+ModeDialog.bad.neverAvalaible=Ce bouton est d\u00E9sactiv\u00E9 car le mode n'est utilisable ni pour les recettes, ni pour les d\u00E9penses
+ModeDialog.daysNumber=Nombre de jours :
+ModeDialog.debt=D\u00E9bit le :
+ModeDialog.deferred=Diff\u00E9r\u00E9e
+ModeDialog.immediate=Imm\u00E9diate
+ModeDialog.relative=Relative
+ModeDialog.stop=Arr\u00EAt le :
+
+CategoryDialog.title=Cr\u00E9ation de cat\u00E9gorie
+CategoryDialog.category=Cat\u00E9gorie :
+CategoryDialog.category.tooltip=Tapez ici le nom de la cat\u00E9gorie
+CategoryDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom de la cat\u00E9gorie est vide
+CategoryDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 une cat\u00E9gorie de m\u00EAme nom
 
 NotSavedDialog.ignore=Ignorer
 NotSavedDialog.message=Des modifications n'ont pas \u00E9t\u00E9 sauvegard\u00E9es. Que fait-on ?
@@ -147,6 +173,7 @@ TransactionDialog.number=Num\u00E9ro :
 TransactionDialog.receipt=Recette
 TransactionDialog.statement=Relev\u00E9 :
 TransactionDialog.title.new=Nouvelle op\u00E9ration
+TransactionDialog.title.edit=Modification d'op\u00E9ration
 TransactionDialog.valueDate=Date de valeur :
 TransactionDialog.SubPanel.add=Ajouter \u00E0 la transaction
 TransactionDialog.SubPanel.add.tooltip=Cochez cette case pour que le montant global de l'op\u00E9ration soit mis \u00E0 jour automatiquement
@@ -159,8 +186,12 @@ SubTransactionDialog.empty.amount=Ce bouton est d\u00E9sactiv\u00E9 car le monta
 SubTransactionDialog.empty.desciption=Ce bouton est d\u00E9sactiv\u00E9 car le libell\u00E9 de la sous-op\u00E9ration est vide
 SubTransactionDialog.null.amount=Ce bouton est d\u00E9sactiv\u00E9 car le montant est nul
 SubTransactionDialog.title.new=Nouvelle sous-op\u00E9ration
+SubTransactionDialog.title.edit=Modification de sous-op\u00E9ration
 SubTransactionDialog.description.tooltip=Tapez le descrition de la sous-op\u00E9ration ici
 SubTransactionDialog.receipt.tooltip=Cochez cette case si la sous-op\u00E9ration est une recette
 
 Category.undefined=Ind\u00E9finie
 Mode.undefined=Ind\u00E9fini
+
+VersionManager.unknown=Inconnue
+
