--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -65,7 +65,7 @@ MainMenu.Transactions.Delete.ToolTip=Efface l'op\u00E9ration s\u00E9lectionn\u00
 
 MainMenu.Transactions.Periodical=G\u00E9n\u00E9rer les op\u00E9rations p\u00E9riodiques
 MainMenu.Transactions.Periodical.Mnemonic=P;
-MainMenu.Transactions.Periodical.ToolTip=Cr\u00E9e les op\u00E9rations p\u00E9riodiques
+MainMenu.Transactions.Periodical.ToolTip=G\u00E9n\u00E9rer les op\u00E9rations p\u00E9riodiques
 
 MainMenuBar.Filter=Filtre
 MainMenuBar.Filter.Tooltip=Ce menu permet de filtrer la liste des op\u00E9rations
