--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -30,6 +30,10 @@ MainMenu.SaveAs=Enregistrer sous ...
 MainMenu.SaveAs.Mnemonic=S
 MainMenu.SaveAs.ToolTip=Cr\u00E9e une copie du fichier de comptes actuellement ouvert
 
+MainMenu.Preferences=Pr\u00E9f\u00E9rences
+MainMenu.Preferences.ToolTip=Ouvre l'\u00E9cran de gestion des pr\u00E9f\u00E9rences
+MainMenu.Preferences.Mnemonic=P
+
 MainMenu.Quit=Quitter
 MainMenu.Quit.Mnemonic=Q
 MainMenu.Quit.Accelerator=Q
@@ -56,6 +60,7 @@ MainMenu.Transactions.Duplicate=Dupliquer l'op\u00E9ration
 MainMenu.Transactions.Duplicate.ToolTip=Duplique l'op\u00E9ration s\u00E9lectionn\u00E9e
 
 MainMenu.Transactions.Edit=Modifier l'op\u00E9ration
+MainMenu.Transactions.Edit.Mnemonic=M
 MainMenu.Transactions.Edit.ToolTip=Modifie l'op\u00E9ration s\u00E9lectionn\u00E9e
 
 MainMenu.Transactions.Delete=Effacer l'op\u00E9ration
@@ -66,6 +71,9 @@ MainMenu.Transactions.Delete.ToolTip=Efface l'op\u00E9ration s\u00E9lectionn\u00
 MainMenu.Transactions.Periodical=G\u00E9n\u00E9rer les op\u00E9rations p\u00E9riodiques
 MainMenu.Transactions.Periodical.Mnemonic=P;
 MainMenu.Transactions.Periodical.ToolTip=G\u00E9n\u00E9rer les op\u00E9rations p\u00E9riodiques
+MainMenu.Transactions.ManagePeriodicals=Administrer les op\u00E9rations p\u00E9riodiques
+MainMenu.Transactions.ManagePeriodicals.Mnemonic=A;
+MainMenu.Transactions.ManagePeriodicals.ToolTip=Administre les op\u00E9rations p\u00E9riodiques transactions (cr\u00E9ation, suppression, modification)
 
 MainMenuBar.Filter=Filtre
 MainMenuBar.Filter.Tooltip=Ce menu permet de filtrer la liste des op\u00E9rations
