--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -201,5 +201,20 @@ SubTransactionDialog.receipt.tooltip=Cochez cette case si la sous-op\u00E9ration
 Category.undefined=Ind\u00E9finie
 Mode.undefined=Ind\u00E9fini
 
+PreferencesDialog.title=Pr\u00E9f\u00E9rences
+PreferencesDialog.Localization.title=Localisation
+PreferencesDialog.Localization.country=Pays
+PreferencesDialog.Localization.customCountry=Personnalis\u00E9
+PreferencesDialog.Localization.customCountry.tooTip=Cliquez sur ce choix, ou s\u00E9lectionnez le pays dans la liste ci-dessous pour choisir un pays diff\u00E9rent de celui de votre syst\u00E8me
+PreferencesDialog.Localization.defaultCountry=Par d\u00E9faut ({0})
+PreferencesDialog.Localization.defaultCountry.toolTip=En s\u00E9lectionnant ce choix, le pays retenu sera celui par d\u00E9faut pour votre syst\u00E8me ({0})
+PreferencesDialog.Localization.defaultLanguage=Langue du syst\u00E8me (Anglais si non disponible dans Yapbam)
+PreferencesDialog.Localization.defaultLanguage.toolTip=Cliquer ici pour utiliser la langue par d\u00E9faut du syst\u00E8me ou, \u00E0 si elle n'est pas disponible dans Yapbam, l'anglais
+PreferencesDialog.Localization.language=Langue
+PreferencesDialog.Localization.revert=Annuler les modifications
+PreferencesDialog.Localization.revert.toolTip=Annuler les modifications et revenir aux r\u00E9glages pr\u00E9c\u00E9dents
+
+PreferencesDialog.LookAndFeel.title=Apparence
+
 VersionManager.unknown=Inconnue
 
