--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -215,6 +215,10 @@ PreferencesDialog.Localization.revert=Annuler les modifications
 PreferencesDialog.Localization.revert.toolTip=Annuler les modifications et revenir aux r\u00E9glages pr\u00E9c\u00E9dents
 
 PreferencesDialog.LookAndFeel.title=Apparence
+PreferencesDialog.LookAndFeel.java=Apparence ind\u00E9pendante du syst\u00E8me
+PreferencesDialog.LookAndFeel.java.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit ind\u00E9pendante du syst\u00E8me
+PreferencesDialog.LookAndFeel.platform=Apparence du syst\u00E8me
+PreferencesDialog.LookAndFeel.platform.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit celle par d\u00E9faut du syst\u00E8me
 
 VersionManager.unknown=Inconnue
 
