--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -220,5 +220,7 @@ PreferencesDialog.LookAndFeel.java.toolTip=Cliquer sur ce bouton pour que l'inte
 PreferencesDialog.LookAndFeel.platform=Apparence du syst\u00E8me
 PreferencesDialog.LookAndFeel.platform.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit celle par d\u00E9faut du syst\u00E8me
 
+PeriodicManagementDialog.title=Gestion des op\u00E9rations p\u00E9riodiques
+
 VersionManager.unknown=Inconnue
 
