--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -107,7 +107,7 @@ CheckModePanel.valueDateEnabled.toolTip=Cochez cette case pour remplacer automat
 AccountDialog.title=Cr\u00E9ation de compte
 AccountDialog.account=Compte :
 AccountDialog.account.tooltip=Tapez ici l'identifiant du compte
-AccountDialog.balance=Solde :
+AccountDialog.balance=Solde initial :
 AccountDialog.balance.tooltip=Tapez ici le solde initial du compte
 AccountDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom du compte est vide
 AccountDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 un compte de m\u00EAme nom
