--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -104,7 +104,8 @@ CheckModePanel.valueDate.tooltip=Entrez une date de valeur \u00E0 appliquer aux 
 CheckModePanel.valueDateEnabled=Remplacer la date de valeur par
 CheckModePanel.valueDateEnabled.toolTip=Cochez cette case pour remplacer automatiquement la date de valeur des op\u00E9rations point\u00E9es par le champ ci-contre
 
-AccountDialog.title=Cr\u00E9ation de compte
+AccountDialog.title.new=Cr\u00E9ation de compte
+AccountDialog.title.edit=Edition de compte
 AccountDialog.account=Compte :
 AccountDialog.account.tooltip=Tapez ici l'identifiant du compte
 AccountDialog.balance=Solde initial :
@@ -113,7 +114,8 @@ AccountDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom du compte est vi
 AccountDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 un compte de m\u00EAme nom
 AccountDialog.err3=Ce bouton est d\u00E9sactiv\u00E9 car le solde n'est pas un nombre
 
-ModeDialog.new.title=Nouveau mode de paiement
+ModeDialog.title.new=Nouveau mode de paiement
+ModeDialog.title.edit=Edition de mode de paiement
 ModeDialog.account=Compte : {0}
 ModeDialog.name=Nom :
 ModeDialog.forDebts=Utilisable pour les d\u00E9penses
