--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -90,6 +90,14 @@ MainMenu.About=A propos ...
 MainMenu.About.Mnemonic=A
 MainMenu.About.ToolTip=Affiche les informations sur ce programme
 
+MainMenu.CheckUpdate=Rechercher des mises à jour
+MainMenu.MainMenu.CheckUpdate.ToolTip=Recherche des mises à jour sur Internet
+MainMenu.CheckUpdate.Error.title=Impossible de rechercher les mises \u00E0 jour
+MainMenu.CheckUpdate.HttpError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>HttpError {0,number}</B><BR><BR>Ce serveur est probablement momentan\u00E9ment hors service.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>{0}</B><BR><BR>V\u00E9rifiez votre connexion Internet, et la configuration du proxy dans les pr\u00E9f\u00E9rences de Yapbam.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.Success=<HTML><BODY>Une nouvelle version de <B>Yapbam</B> est disponible.<BR><BR>Votre version : <B>{0}</B><BR>Derni\u00E8re version publi\u00E9e : <B>{1}</B><BR><BR>Cette mise \u00E0 jour est disponible \u00E0 l''URL <a href="{2}">{2}</a></BODY></HTML>
+MainMenu.CheckUpdate.Success.title=Une mise \u00E0 jour est disponible
+
 BalanceHistory.balance=Solde au {0} : {1}
 BalanceHistory.showGrid=Afficher la grille
 
@@ -220,6 +228,4 @@ PreferencesDialog.LookAndFeel.platform=Apparence du syst\u00E8me
 PreferencesDialog.LookAndFeel.platform.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit celle par d\u00E9faut du syst\u00E8me
 
 PeriodicManagementDialog.title=Gestion des op\u00E9rations p\u00E9riodiques
-
-VersionManager.unknown=Inconnue
 
