--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -94,9 +94,12 @@ MainMenu.CheckUpdate=Rechercher des mises à jour
 MainMenu.MainMenu.CheckUpdate.ToolTip=Recherche des mises à jour sur Internet
 MainMenu.CheckUpdate.Error.title=Impossible de rechercher les mises \u00E0 jour
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>HttpError {0,number}</B><BR><BR>Ce serveur est probablement momentan\u00E9ment hors service.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
-MainMenu.CheckUpdate.IOError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>{0}</B><BR><BR>V\u00E9rifiez votre connexion Internet (Yapbam n'est pas encore capable de se connecter via un proxy).<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
-MainMenu.CheckUpdate.Success=<HTML><BODY>Une nouvelle version de <B>Yapbam</B> est disponible.<BR><BR>Votre version : <B>{0}</B><BR>Derni\u00E8re version publi\u00E9e : <B>{1}</B><BR><BR>Cette mise \u00E0 jour est disponible \u00E0 l''URL <a href="{2}">{2}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>{0}</B><BR><BR>V\u00E9rifiez votre connexion Internet (Yapbam n''est pas encore capable de se connecter via un proxy).<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.Success.Header=<HTML><BODY>Une nouvelle version de <B>Yapbam</B> est disponible.</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Votre version : <B>{0}</B><BR>Derni\u00E8re version publi\u00E9e : <B>{1}</B><BR><BR>Cette mise \u00E0 jour est disponible \u00E0 l''URL <a href="{2}">{2}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.title=Une mise \u00E0 jour est disponible
+MainMenu.CheckUpdate.NoUpdate.title=Pas de mise \u00E0 jour disponible
+MainMenu.CheckUpdate.NoUpdate=Yapbam est à jour
 
 BalanceHistory.balance=Solde au {0} : {1}
 BalanceHistory.showGrid=Afficher la grille
@@ -156,6 +159,8 @@ GenericButton.cancel=Annuler
 GenericButton.cancel.toolTip=Annule la saisie en cours
 GenericButton.ok=Valider
 GenericButton.ok.toolTip=Valide la saisie en cours
+GenericButton.close.ToolTip=Ce bouton permet de fermer ce dialogue
+GenericButton.close=Fermer
 
 Transaction.0=S/O
 Transaction.account=Compte
