--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -94,7 +94,7 @@ MainMenu.CheckUpdate=Rechercher des mises à jour
 MainMenu.MainMenu.CheckUpdate.ToolTip=Recherche des mises à jour sur Internet
 MainMenu.CheckUpdate.Error.title=Impossible de rechercher les mises \u00E0 jour
 MainMenu.CheckUpdate.HttpError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>HttpError {0,number}</B><BR><BR>Ce serveur est probablement momentan\u00E9ment hors service.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
-MainMenu.CheckUpdate.IOError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>{0}</B><BR><BR>V\u00E9rifiez votre connexion Internet (Yapbam n''est pas encore capable de se connecter via un proxy).<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
+MainMenu.CheckUpdate.IOError=<HTML><BODY>Probl\u00E8me de communication avec le serveur de mise \u00E0 jour : <B>{0}</B><BR><BR>V\u00E9rifiez votre connexion Internet ou les param\u00E8tres de connexion \u00E0 Internet de Yapbam.<BR><BR>Si le probl\u00E8me persiste, rendez-vous sur le site <a href="{1}">{1}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.Header=<HTML><BODY>Une nouvelle version de <B>Yapbam</B> est disponible.</BODY></HTML>
 MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Votre version : <B>{0}</B><BR>Derni\u00E8re version publi\u00E9e : <B>{1}</B><BR><BR>Cette mise \u00E0 jour est disponible \u00E0 l''URL <a href="{2}">{2}</a></BODY></HTML>
 MainMenu.CheckUpdate.Success.title=Une mise \u00E0 jour est disponible
@@ -231,6 +231,21 @@ PreferencesDialog.LookAndFeel.java=Apparence ind\u00E9pendante du syst\u00E8me
 PreferencesDialog.LookAndFeel.java.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit ind\u00E9pendante du syst\u00E8me
 PreferencesDialog.LookAndFeel.platform=Apparence du syst\u00E8me
 PreferencesDialog.LookAndFeel.platform.toolTip=Cliquer sur ce bouton pour que l'interface de Yapbam soit celle par d\u00E9faut du syst\u00E8me
+
+PreferencesDialog.Network.title=R\u00E9seau
+PreferencesDialog.Network.authentication=Authentification
+PreferencesDialog.Network.direct=Connexion directe
+PreferencesDialog.Network.direct.tooltip=S\u00E9lectionnez ce bouton si vous acc\u00E9dez directement \u00E0 Internet
+PreferencesDialog.Network.password=Mot de passe :
+PreferencesDialog.Network.password.tooltip=Entrez ici le mot de passe utilisateur utilis\u00E9 pour l'authentification aupr\u00E8s du serveur mandataire
+PreferencesDialog.Network.port.label=Port :
+PreferencesDialog.Network.port.tooltip=Entrez le port du serveur mandataire (proxy), laissez ce champ vide pour utiliser le port par d\u00E9faut (3128)
+PreferencesDialog.Network.proxy.label=Proxy :
+PreferencesDialog.Network.proxy.title=Connexion via un proxy Http
+PreferencesDialog.Network.proxy.tooltip=S\u00E9lectionnez ce bouton si vous acc\u00E9dez Internet en passant par un serveur mandataire (proxy)
+PreferencesDialog.Network.proxyField.tooltip=Entrez l'adresse IP ou le nom DNS du serveur mandataire (proxy)
+PreferencesDialog.Network.user=Utilisateur :
+PreferencesDialog.Network.user.toolTip=Entrez ici l'identifiant utilisateur utilis\u00E9 pour l'authentification aupr\u00E8s du serveur mandataire
 
 PeriodicManagementDialog.title=Gestion des op\u00E9rations p\u00E9riodiques
 
