--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -68,6 +68,9 @@ MainMenu.Transactions.Delete.Mnemonic=E
 MainMenu.Transactions.Delete.Accelerator=E
 MainMenu.Transactions.Delete.ToolTip=Efface l'op\u00E9ration s\u00E9lectionn\u00E9e
 
+MainMenu.Transactions.Check=Pointer l'op\u00E9ration
+MainMenu.Transactions.Check.ToolTip=Pointe l'op\u00E9ration s\u00E9lectionn\u00E9e
+
 MainMenu.Transactions.Periodical=G\u00E9n\u00E9rer les op\u00E9rations p\u00E9riodiques
 MainMenu.Transactions.Periodical.Mnemonic=P;
 MainMenu.Transactions.Periodical.ToolTip=G\u00E9n\u00E9rer les op\u00E9rations p\u00E9riodiques
