--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -134,6 +134,9 @@ ModeDialog.account=Compte : {0}
 ModeDialog.name=Nom :
 ModeDialog.forDebts=Utilisable pour les d\u00E9penses
 ModeDialog.forReceipts=Utilisable pour les recettes
+ModeDialog.name.short=Nom
+ModeDialog.forDebts.short=D\u00E9penses
+ModeDialog.forReceipts.short=Recettes
 ModeDialog.useCheckBook=Utiliser un ch\u00E9quier
 ModeDialog.bad.debt=Ce bouton est d\u00E9sactiv\u00E9 car les informations d'utilisation pour les d\u00E9penses sont incoh\u00E9rentes
 ModeDialog.bad.receipt=Ce bouton est d\u00E9sactiv\u00E9 car les informations d'utilisation pour les recettes sont incoh\u00E9rentes
@@ -146,6 +149,9 @@ ModeDialog.deferred=Diff\u00E9r\u00E9e
 ModeDialog.immediate=Imm\u00E9diate
 ModeDialog.relative=Relative
 ModeDialog.stop=Arr\u00EAt le :
+ModeDialog.Delete.tooltip=Ce bouton supprime le mode actuellement sélectionné
+ModeDialog.Edit.tooltip=Ce bouton permet d'\u00E9diter le mode de paiement s\u00E9lectionn\u00E9
+ModeDialog.New.tooltip=Ce bouton permet de cr\u00E9er un nouveau mode
 
 CategoryDialog.title=Cr\u00E9ation de cat\u00E9gorie
 CategoryDialog.category=Cat\u00E9gorie :
@@ -164,6 +170,9 @@ GenericButton.ok=Valider
 GenericButton.ok.toolTip=Valide la saisie en cours
 GenericButton.close.ToolTip=Ce bouton permet de fermer ce dialogue
 GenericButton.close=Fermer
+GenericButton.new=Cr\u00E9er
+GenericButton.edit=Editer
+GenericButton.delete=Supprimer
 
 Transaction.0=S/O
 Transaction.account=Compte
