--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -4,6 +4,9 @@ MainFrame.BalanceHistory=Historique du solde
 MainFrame.CheckedBalance=Solde point\u00E9 : {0}
 MainFrame.CurrentBalance=Solde courant : {0}
 MainFrame.FinalBalance=Solde final : {0}
+MainFrame.CheckedBalance.ToolTip=Solde actuel (ne tient compte que des op\u00E9rations point\u00E9es)
+MainFrame.CurrentBalance.ToolTip=Solde actuel (ne tient pas compte des op\u00E9rations dont la date de valeur est post\u00E9rieure à aujourd'hui)
+MainFrame.FinalBalance.ToolTip=Solde final (tient compte de toutes les op\u00E9rations)
 MainFrame.Transactions=Op\u00E9rations
 MainFrame.ReadLastError=Une erreur est survenue lors de la lecture du dernier fichier ouvert {0}
 
