--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -263,4 +263,6 @@ PreferencesDialog.Network.user=Utilisateur :
 PreferencesDialog.Network.user.toolTip=Entrez ici l'identifiant utilisateur utilis\u00E9 pour l'authentification aupr\u00E8s du serveur mandataire
 
 PeriodicManagementDialog.title=Gestion des op\u00E9rations p\u00E9riodiques
+PeriodicalTransactionDialog.title.new=Nouvelle op\u00E9ration p\u00E9riodique
+PeriodicalTransactionDialog.title.edit=Modification d'une op\u00E9ration p\u00E9riodique
 
