--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -263,6 +263,20 @@ PreferencesDialog.Network.user=Utilisateur :
 PreferencesDialog.Network.user.toolTip=Entrez ici l'identifiant utilisateur utilis\u00E9 pour l'authentification aupr\u00E8s du serveur mandataire
 
 PeriodicManagementDialog.title=Gestion des op\u00E9rations p\u00E9riodiques
+PeriodicalTransactionDialog.activated=Activ\u00E9e
+PeriodicalTransactionDialog.activated.toolTip=D\u00E9cochez cette case pour suspendre la g\u00E9n\u00E9ration de cette op\u00E9ration
+PeriodicalTransactionDialog.day.toolTip=Entrez ici le jour de l'op\u00E9ration
+PeriodicalTransactionDialog.days=jours
+PeriodicalTransactionDialog.months=mois
+PeriodicalTransactionDialog.nextDate=Prochaine date : 
+PeriodicalTransactionDialog.nextDate.toolTip=Entrez ici la date de la prochaine op\u00E9ration
+PeriodicalTransactionDialog.period=Puis tous les
+PeriodicalTransactionDialog.step.toolTip=Entrez ici l'interval entre deux op\u00E9rations
+PeriodicalTransactionDialog.the=le
 PeriodicalTransactionDialog.title.new=Nouvelle op\u00E9ration p\u00E9riodique
 PeriodicalTransactionDialog.title.edit=Modification d'une op\u00E9ration p\u00E9riodique
+PeriodicalTransactionDialog.error.dateStepper0=Les champs d\u00E9crivant la p\u00E9riode de g\u00E9n\u00E9ration de la transaction ne sont pas correctement remplis
+PeriodicalTransactionDialog.error.nextDate=La prochaine date est incorrecte
+PeriodicalTransactionDialog.generationBorderTitle=G\u00E9n\u00E9ration
+PeriodicalTransactionDialog.transactionBorderTitle=Op\u00E9ration
 
