--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -176,6 +176,7 @@ GenericButton.close=Fermer
 GenericButton.new=Cr\u00E9er
 GenericButton.edit=Editer
 GenericButton.delete=Supprimer
+GenericButton.duplicate=Dupliquer
 
 Transaction.0=S/O
 Transaction.account=Compte
@@ -262,7 +263,6 @@ PreferencesDialog.Network.proxyField.tooltip=Entrez l'adresse IP ou le nom DNS d
 PreferencesDialog.Network.user=Utilisateur :
 PreferencesDialog.Network.user.toolTip=Entrez ici l'identifiant utilisateur utilis\u00E9 pour l'authentification aupr\u00E8s du serveur mandataire
 
-PeriodicManagementDialog.title=Gestion des op\u00E9rations p\u00E9riodiques
 PeriodicalTransactionDialog.activated=Activ\u00E9e
 PeriodicalTransactionDialog.activated.toolTip=D\u00E9cochez cette case pour suspendre la g\u00E9n\u00E9ration de cette op\u00E9ration
 PeriodicalTransactionDialog.day.toolTip=Entrez ici le jour de l'op\u00E9ration
@@ -279,4 +279,15 @@ PeriodicalTransactionDialog.error.dateStepper0=Les champs d\u00E9crivant la p\u0
 PeriodicalTransactionDialog.error.nextDate=La prochaine date est incorrecte
 PeriodicalTransactionDialog.generationBorderTitle=G\u00E9n\u00E9ration
 PeriodicalTransactionDialog.transactionBorderTitle=Op\u00E9ration
+PeriodicalTransactionManager.title=Gestion des op\u00E9rations p\u00E9riodiques
+PeriodicalTransactionManager.toolTip=Cet onglet permet de g\u00E9rer les op\u00E9rations p\u00E9riodiques
+PeriodicalTransactionManager.active.column=Active
+PeriodicalTransactionManager.nextDate.column=Prochaine \u00E9ch\u00E9ance
+PeriodicalTransactionManager.period.column=Tous les
+PeriodicalTransactionManager.period.daily.content={0,number} jours
+PeriodicalTransactionManager.period.monthly.content={0,number} mois le {1,number}
+PeriodicalTransactionManager.new.toolTip=Ouvre le dialogue de cr\u00E9ation d'une op\u00E9ration p\u00E9riodique
+PeriodicalTransactionManager.delete.toolTip=Supprime l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
+PeriodicalTransactionManager.edit.toolTip=Ouvre le dialogue d'\u00E9dition de l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
+PeriodicalTransactionManager.duplicate.toolTip=Duplique puis \u00E9dite l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
 
