--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -275,7 +275,7 @@ PeriodicalTransactionDialog.step.toolTip=Entrez ici l'interval entre deux op\u00
 PeriodicalTransactionDialog.the=le
 PeriodicalTransactionDialog.title.new=Nouvelle op\u00E9ration p\u00E9riodique
 PeriodicalTransactionDialog.title.edit=Modification d'une op\u00E9ration p\u00E9riodique
-PeriodicalTransactionDialog.error.dateStepper0=Les champs d\u00E9crivant la p\u00E9riode de g\u00E9n\u00E9ration de la transaction ne sont pas correctement remplis
+PeriodicalTransactionDialog.error.dateStepper=Les champs d\u00E9crivant la p\u00E9riode de g\u00E9n\u00E9ration de la transaction ne sont pas correctement remplis
 PeriodicalTransactionDialog.error.nextDate=La prochaine date est incorrecte
 PeriodicalTransactionDialog.generationBorderTitle=G\u00E9n\u00E9ration
 PeriodicalTransactionDialog.transactionBorderTitle=Op\u00E9ration
