--- a/src/Resources_fr.properties
+++ b/src/Resources_fr.properties
@@ -1,6 +1,5 @@
 ApplicationName=Yet Another Personal Bank Account Manager
 
-MainFrame.BalanceHistory=Historique du solde
 MainFrame.CheckedBalance=Solde point\u00E9 : {0}
 MainFrame.CurrentBalance=Solde courant : {0}
 MainFrame.FinalBalance=Solde final : {0}
@@ -8,6 +7,7 @@ MainFrame.CheckedBalance.ToolTip=Solde actuel (ne tient compte que des op\u00E9r
 MainFrame.CurrentBalance.ToolTip=Solde actuel (ne tient pas compte des op\u00E9rations dont la date de valeur est post\u00E9rieure à aujourd'hui)
 MainFrame.FinalBalance.ToolTip=Solde final (tient compte de toutes les op\u00E9rations)
 MainFrame.Transactions=Op\u00E9rations
+MainFrame.Transactions.toolTip=Affiche la table des op\u00E9rations et divers outils pour cr\u00E9, dupliquer, pointer, ... des op\u00E9rations
 MainFrame.ReadLastError=Une erreur est survenue lors de la lecture du dernier fichier ouvert {0}
 
 MainMenu.File=Fichier
@@ -107,6 +107,8 @@ MainMenu.CheckUpdate.Success.title=Une mise \u00E0 jour est disponible
 MainMenu.CheckUpdate.NoUpdate.title=Pas de mise \u00E0 jour disponible
 MainMenu.CheckUpdate.NoUpdate=Yapbam est à jour
 
+BalanceHistory.title=Historique du solde
+BalanceHistory.toolTip=Graphique de l'\u00E9volution du solde au jour le jour
 BalanceHistory.balance=Solde au {0} : {1}
 BalanceHistory.showGrid=Afficher la grille
 
@@ -291,3 +293,5 @@ PeriodicalTransactionManager.delete.toolTip=Supprime l'op\u00E9ration p\u00E9rio
 PeriodicalTransactionManager.edit.toolTip=Ouvre le dialogue d'\u00E9dition de l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
 PeriodicalTransactionManager.duplicate.toolTip=Duplique puis \u00E9dite l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
 
+AdministrationPlugIn.title=Administration
+AdministrationPlugIn.toolTip=Ajout, suppression, modification des comptes, des cat\u00E9gories, etc ...
