--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -132,6 +132,7 @@ AccountDialog.balance.tooltip=Tapez ici le solde initial du compte
 AccountDialog.err1=Ce bouton est d\u00E9sactiv\u00E9 car le nom du compte est vide
 AccountDialog.err2=Ce bouton est d\u00E9sactiv\u00E9 car il existe d\u00E9j\u00E0 un compte de m\u00EAme nom
 AccountDialog.err3=Ce bouton est d\u00E9sactiv\u00E9 car le solde n'est pas un nombre
+AccountDialog.modes.border.title=Modes de paiement
 
 ModeDialog.title.new=Nouveau mode de paiement
 ModeDialog.title.edit=Edition de mode de paiement
@@ -157,6 +158,7 @@ ModeDialog.stop=Arr\u00EAt le :
 ModeDialog.Delete.tooltip=Ce bouton supprime le mode actuellement sélectionné
 ModeDialog.Edit.tooltip=Ce bouton permet d'\u00E9diter le mode de paiement s\u00E9lectionn\u00E9
 ModeDialog.New.tooltip=Ce bouton permet de cr\u00E9er un nouveau mode
+ModeDialog.Duplicate.tooltip=Ce bouton duplique le mode de paiement s\u00E9lectionn\u00E9
 
 CategoryDialog.title=Cr\u00E9ation de cat\u00E9gorie
 CategoryDialog.category=Cat\u00E9gorie :
