--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -178,7 +178,8 @@ GeneratePeriodicalTransactionsDialog.error.date=Ce bouton est d\u00E9sactiv\u00E
 GeneratePeriodicalTransactionsDialog.error.noTransaction=Ce bouton est d\u00E9sactiv\u00E9 car aucune op\u00E9ration n'est \u00E0 g\u00E9n\u00E9rer
 GeneratePeriodicalTransactionsDialog.lastDate=G\u00E9n\u00E9rer les op\u00E9rations jusqu'au :
 GeneratePeriodicalTransactionsDialog.lastDate.toolTip=Entrez ici la date jusqu'\u00E0 laquelle g\u00E9n\u00E9rer les op\u00E9rations
-GeneratePeriodicalTransactionsDialog.summary={0} op\u00E9rations. Recettes : {1}, d\u00E9penses {2}, total : {3}
+GeneratePeriodicalTransactionsDialog.summary={0} op\u00E9rations. Recettes : {1}, d\u00E9penses : {2}, total : {3}
+GeneratePeriodicalTransactionsDialog.ignored=Ignor\u00E9e
 
 GenericButton.cancel=Annuler
 GenericButton.cancel.toolTip=Annule la saisie en cours
