--- a/Yapbam/src/Resources_fr.properties
+++ b/Yapbam/src/Resources_fr.properties
@@ -321,5 +321,19 @@ PeriodicalTransactionManager.delete.toolTip=Supprime l'op\u00E9ration p\u00E9rio
 PeriodicalTransactionManager.edit.toolTip=Ouvre le dialogue d'\u00E9dition de l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
 PeriodicalTransactionManager.duplicate.toolTip=Duplique puis \u00E9dite l'op\u00E9ration p\u00E9riodique s\u00E9lectionn\u00E9e
 
+AccountManager.balanceColumn.title=Solde initial
+AccountManager.balanceColumn.toolTip=Double cliquez sur cette cellule pour \u00E9diter le solde initial du compte (La touche 'entr\u00E9e' validera la saisie)
+AccountManager.deleteAccount.toolTip=Ce bouton permet de supprimer le compte s\u00E9lectionn\u00E9
+AccountManager.deleteMessage.confirm=Confirmez-vous la suppression
+AccountManager.deleteMessage.more=La suppression de ce compte implique la suppression de ses {0,number,integer} op\u00E9rations.
+AccountManager.deleteMessage.one=La suppression de ce compte implique la suppression de son unique op\u00E9ration
+AccountManager.deleteMessage.title=Suppression d'un compte contenant des op\u00E9rations
+AccountManager.nameColumn.toolTip=Double cliquez sur cette cellule pour \u00E9diter le nom du compte (La touche 'entr\u00E9e' validera la saisie)
+AccountManager.title=Gestion des comptes
+AccountManager.toolTip=Cet onglet permet de g\u00E9rer les comptes
+AccountManager.transactionsNumber.title=Nombre d'op\u00E9rations
+AccountManager.transactionsNumber.toolTip=Cette cellule contient le nombre d'op\u00E9rations du compte
+
+
 AdministrationPlugIn.title=Administration
 AdministrationPlugIn.toolTip=Ajout, suppression, modification des comptes, des cat\u00E9gories, etc ...
